--- a/src/com/upload/index.html
+++ b/src/com/upload/index.html
@@ -12,7 +12,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="../../../images/favicon.ico"
+      href="../../../images/logo.png"
     />
 
     <title>上传组件</title>
