--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
     <meta name="renderer" content="webkit" />
     <meta name="format-detection" content="telephone=no" />
     <link rel="shortcut icon" type="image/x-icon" href="../images/logo.png" />
-
+    <script
+      type="text/javascript"
+      src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.13.js"
+    ></script>
     <title>自在家后台管理系统</title>
   </head>
   <body>
